--- a/index.html
+++ b/index.html
@@ -702,6 +702,60 @@
             }
         }
 
+        async function uploadAttachmentToGithub(file, issueId) {
+            try {
+                // Create a unique filename with timestamp
+                const timestamp = Date.now();
+                const safeFileName = file.name.replace(/[^a-zA-Z0-9.-]/g, '_');
+                const fileName = `${issueId}_${timestamp}_${safeFileName}`;
+                const filePath = `attachments/${fileName}`;
+                
+                // Read file as base64
+                return new Promise((resolve, reject) => {
+                    const reader = new FileReader();
+                    reader.onload = async function(e) {
+                        try {
+                            const content = btoa(e.target.result);
+                            const url = `https://api.github.com/repos/${GITHUB_OWNER}/${GITHUB_REPO}/contents/${filePath}`;
+                            
+                            const response = await fetch(url, {
+                                method: 'PUT',
+                                headers: {
+                                    'Authorization': `token ${GITHUB_TOKEN}`,
+                                    'Content-Type': 'application/json'
+                                },
+                                body: JSON.stringify({
+                                    message: `Add attachment for issue #${issueId}`,
+                                    content: content
+                                })
+                            });
+
+                            if (!response.ok) {
+                                const error = await response.json();
+                                throw new Error(error.message || 'Failed to upload attachment');
+                            }
+
+                            // Return the file reference
+                            resolve({
+                                path: filePath,
+                                name: file.name,
+                                type: file.type,
+                                size: file.size,
+                                url: `https://raw.githubusercontent.com/${GITHUB_OWNER}/${GITHUB_REPO}/main/${filePath}`
+                            });
+                        } catch (error) {
+                            reject(error);
+                        }
+                    };
+                    reader.onerror = () => reject(new Error('Failed to read file'));
+                    reader.readAsArrayBuffer(file);
+                });
+            } catch (error) {
+                console.error('Error uploading attachment:', error);
+                throw error;
+            }
+        }
+
         async function saveToGithub(issues) {
             try {
                 const url = `https://api.github.com/repos/${GITHUB_OWNER}/${GITHUB_REPO}/contents/issues.json`;
